# backend/swagger.json
@@ -1,11 +1,11 @@
 {
-"swagger": "2.0",
+  "swagger": "2.0",
   "info": {
     "version": "1.0.0",
     "title": "My Contacts API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "cse341-contactsapi-swagger.onrender.com",
+  "host": "",
   "basePath": "/",
   "schemes": [
     "http",
@@ -164,6 +164,13 @@
             "description": "OK"
           }
         }
+      }
+    },
+    "/api-docs/api-docs": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
       }
     }
   }
